# Filey

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp
controller/: CMakeLists.txt  controller.cpp
encrypter/: CMakeLists.txt  encrypter.cpp
fileprocessor/: CMakeLists.txt  fileprocessor.cpp
hasher/: CMakeLists.txt  hasher.cpp
hashes/: examplehash
include/: controller.h  encrypter.h  fileprocessor.h  hasher.h  logger.h  view.h
logger/: CMakeLists.txt  logger.cpp
logs/: log.txt  template.txt
src/: hasher.cpp  logger.cpp  main.cpp
view/: CMakeLists.txt  view.cpp
